# python-ensurepkg

./: README.md  example.py  pyproject.toml
ensurepkg/: __init__.py
